src/objects/Region__c.object
<CustomObject>
    <fields>
        <fullName>Account_Salesperson__c</fullName>
        <label>Account Salesperson</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesman__c</fullName>
        <label>Salesman</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Salesman__c</columns>
        <columns>Account_Salesperson__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>